Fixed invisible search icon

--- a/src/modules/search/search.scss
+++ b/src/modules/search/search.scss
@@ -29,6 +29,10 @@ $searchCurves: (
 
       background: $colorBlack;
     }
+
+    @include mq($to: small) {
+      margin-left: pxToRem($sizeBiggerBig + $sizeTiny);
+    }
   }
 
   &__icon {
